@@ -387,6 +387,14 @@ GeneratorBusinessH::doHome(IR__::HomeDef_ptr home)
 	{
 		doHome(base);
 	}
+	//
+	// supported interfaces
+	//
+	IR__::InterfaceDefSeq_var supp_intfs = home -> supported_interfaces();
+	for(CORBA::ULong i = 0; i < supp_intfs->length(); i++) {
+		handleAttribute((*supp_intfs)[i]);
+		handleOperation((*supp_intfs)[i]);
+	};
 
 	handleAttribute(home);
 	handleOperation(home);
