@@ -1,3 +1,4 @@
+- "home supports interfaces" is enabled
 - vc7 project generator create subdirs for each project
 - new backend for CSD
 
